--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "expo": "^22.0.2",
+    "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5"
   }
