Add node condition in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,4 @@ node_js:
  - "node"
 before_install: 
   if [[ `npm -v` != 4* ]]; then npm i -g npm@4; fi
+  if [[ `node -v` != 8* ]]; then nvm install 8; fi
