--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,10 @@ language: node_js
 node_js:
  - "node"
 before_install: 
-  if [[ `npm -v` != 4* ]]; then npm i -g npm@4; fi
-  if [[ `node -v` != 8* ]]; then nvm install 8; fi
+ - if [[ `npm -v` != 4* ]]; then npm i -g npm@4; fi
+ - if [[ `node -v` != 8* ]]; then nvm install 8; fi
+install: 
+  - npm install
+script: 
+  - npm start
+  - jest --coverage
