--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   },
   "dependencies": {
     "expo": "^22.0.2",
