--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "devDependencies": {
     "react-native-scripts": "1.7.0",
     "jest-expo": "^22.0.0",
-    "react-test-renderer": "16.0.0-beta.5"
+    "react-test-renderer": "16.0.0-beta.5",
+    "codecov": "^1.0.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
