--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "jest": {
     "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native|native-base-shoutem-theme|@shoutem/animation|@shoutem/ui|tcomb-form-native)"
+    ],
     "coverageDirectory": "./coverage/",
     "collectCoverage": true
   },
