--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "expo": "^22.0.2",
     "native-base": "^2.3.3",
-    "react": "16.0.0-beta.5",
+    "react": "16.0.0-alpha.6",
     "react-native": "^0.49.5",
     "react-navigation": "^1.0.0-beta.21"
   }
