--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.7.0",
+    "codecov": "^1.0.0",
     "jest-expo": "^22.0.0",
-    "react-test-renderer": "16.0.0-beta.5",
-    "codecov": "^1.0.0"
+    "react-native-mock": "^0.3.1",
+    "react-native-scripts": "1.7.0",
+    "react-test-renderer": "16.0.0-beta.5"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -17,7 +18,10 @@
     "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo",
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native|expo|react-navigation|native-base-shoutem-theme|@shoutem/theme|@shoutem/animation|@shoutem/ui|tcomb-form-native)"
+    ],
     "coverageDirectory": "./coverage/",
     "collectCoverage": true
   },
@@ -26,6 +30,11 @@
     "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
-    "react-navigation": "^1.0.0-beta.21"
+    "react-navigation": "^1.0.0-beta.21",
+    "react-dom": "^16.0.0",
+    "enzyme": "^3.2.0",
+    "react-test-utils": "^0.0.0",
+    "react-test-renderer": "^16.2.0",
+    "enzyme-adapter-react-16": "^1.0.0"
   }
 }
