--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "private": true,
   "devDependencies": {
     "codecov": "^1.0.0",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme-to-json": "^3.2.2",
+    "jest": "^21.2.1",
     "jest-expo": "^22.0.0",
+    "jest-serializer-enzyme": "^1.0.0",
+    "react-native-animatable": "^1.2.4",
     "react-native-mock": "^0.3.1",
     "react-native-scripts": "1.7.0",
     "react-test-renderer": "16.0.0-beta.5"
@@ -28,7 +34,8 @@
   "dependencies": {
     "expo": "^22.0.2",
     "native-base": "^2.3.3",
-    "react": "16.0.0-beta.5",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-native": "^0.49.5",
     "react-navigation": "^1.0.0-beta.21",
     "react-dom": "^16.0.0",
