--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-native": "^0.49.5",
+    "react-native-checkbox": "^2.0.0",
     "react-navigation": "^1.0.0-beta.21",
-    "react-dom": "^16.0.0",
     "enzyme": "^3.2.0",
     "react-test-utils": "^0.0.0",
     "react-test-renderer": "^16.2.0",
