--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
-    "react-navigation": "^1.0.0-beta.21"
+    "react-navigation": "^1.0.0-beta.21",
+    "react-test-utils": "0.0.1"
   }
 }
