--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-
-    "babel-jest": "^15.0.0",
-    "babel-preset-react-native": "^1.9.0",
     "codecov": "^1.0.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
@@ -14,16 +11,18 @@
     "jest-expo": "^22.0.0",
     "jest-serializer-enzyme": "^1.0.0",
     "jsdom": "^11.5.1",
-    "react-addons-test-utils": "^15.6.2",
-    "react-dom": "^16.2.0",
     "react-native-animatable": "^1.2.4",
     "react-native-mock": "^0.3.1",
     "react-native-mock-render": "0.0.19",
     "react-native-scripts": "1.7.0",
-    "react-test-renderer": "16.0.0-beta.5",
+    "react-test-renderer": "16.0.0-beta.5"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
+    "start": "react-native-scripts start",
+    "eject": "react-native-scripts eject",
+    "android": "react-native-scripts android",
+    "ios": "react-native-scripts ios",
     "test": "jest"
   },
   "jest": {
