--- a/package.json
+++ b/package.json
@@ -35,16 +35,17 @@
     "collectCoverage": true
   },
   "dependencies": {
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.0.0",
     "expo": "^22.0.2",
     "native-base": "^2.3.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-native": "^0.49.5",
     "react-native-checkbox": "^2.0.0",
+    "react-native-modal": "^4.1.1",
     "react-navigation": "^1.0.0-beta.21",
-    "enzyme": "^3.2.0",
-    "react-test-utils": "^0.0.0",
     "react-test-renderer": "^16.2.0",
-    "enzyme-adapter-react-16": "^1.0.0"
+    "react-test-utils": "^0.0.0"
   }
 }
