--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-mock": "^0.3.1",
     "react-native-mock-render": "0.0.19",
     "react-native-scripts": "1.7.0",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "sinon": "^4.1.3"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -32,7 +33,10 @@
       "node_modules/(?!react-native|expo|react-navigation|native-base-shoutem-theme|@shoutem/theme|@shoutem/animation|@shoutem/ui|tcomb-form-native)"
     ],
     "coverageDirectory": "./coverage/",
-    "collectCoverage": true
+    "collectCoverage": true,
+    "setupFiles": [
+      "./jest/setup.js"
+    ]
   },
   "dependencies": {
     "enzyme": "^3.0.0",
