--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-dom": "^16.0.0",
     "react-native": "^0.49.5",
     "react-native-checkbox": "^2.0.0",
+    "react-native-checkbox-heaven": "^0.1.4",
     "react-native-modal": "^4.1.1",
+    "react-native-vector-icons": "^4.4.2",
     "react-native-video": "^2.0.0",
     "react-navigation": "^1.0.0-beta.21",
     "react-test-renderer": "^16.2.0",
